--- a/src/components/inventory/inventory.scss
+++ b/src/components/inventory/inventory.scss
@@ -1,6 +1,18 @@
 .inventory{
-  & p{
+
+  &__container{
     width: 100%;
-    font-size: 2.5rem;
+    background-color: lightgrey;
+    overflow: hidden;
   }
+  &__title {
+    display: inline-block;
+    width: 100%;
+    font-size: 5rem;
+    text-align: center;
+    justify-content: center;
+    margin-top: 2rem;
+  }
+
+
 }
