--- a/src/index.scss
+++ b/src/index.scss
@@ -1,24 +1,25 @@
-*,*::before,*::after{
+*,
+*::before,
+*::after {
   border: 0;
   margin: 0;
   box-sizing: inherit;
 }
 
-html{
+html {
   font-size: 62.5%;
 }
 
-body{
+body {
   box-sizing: border-box;
 }
 
-.header{
- width: 100%;
-  p{
-    margin-top: 1.5rem;
-    text-align: center;
-    font-size: 4rem;
+.header {
+  &__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 23rem;
   }
 }
-
-
